Python 3.12 (64-bit).txt
Python 3.12.4 (tags/v3.12.4:8e8a4ba, Jun  6 2024, 19:30:16) [MSC v.1940 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> numero1 = 1
>>> numero2 = 2
>>> print(numero1 + numero2)
3
>>> nome = Felippe
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'Felippe' is not defined
>>> nome = "Felippe"
>>> sobrenome = "Santana Pessatto"
>>> print(nome + sobrenome)
FelippeSantana Pessatto
>>> print(nome +  sobrenome)
FelippeSantana Pessatto
>>> sobrenome = " Santana Pessatto"
>>> print(nome +  sobrenome)
Felippe Santana Pessatto
>>> notas = [10, 9, 9]
>>> print(notas)
[10, 9, 9]
>>> nota1 = 10
>>> nota2 = 9
>>> nota3 = 9
>>> print((nota1 + nota2 + nota3) / 3)
9.333333333333334
>>> largura_Retangulo = 5
>>> altura_Retangulo = 10
>>> print(largura_Retangulo * altura_Retangulo)
50
>>> soma = (numero1 + numero2)
>>> print ("A soma dos dois números é:" soma)
  File "<stdin>", line 1
    print ("A soma dos dois números é:" soma)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
>>> print ("A soma dos dois números é" soma)
  File "<stdin>", line 1
    print ("A soma dos dois números é" soma)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
>>> print("A soma dos dois números é" soma)
  File "<stdin>", line 1
    print("A soma dos dois números é" soma)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
>>> print("A soma dos dois números é", soma)
A soma dos dois números é 3
>>> nome_completo = (nome + sobrenome)
>>> print("O nome completo é:", nome_completo)
O nome completo é: Felippe Santana Pessatto
>>> media_Notas = (nota1 + nota2 + nota3) / 3
>>> print("A média das notas é:", media_notas)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'media_notas' is not defined. Did you mean: 'media_Notas'?
>>> yes
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'yes' is not defined
>>> print("A média das notas é:", media_Notas)
A média das notas é: 9.333333333333334
>>> area_Retangulo = (largura_Retangulo * altura_Retangulo)
>>> print("A área do retângulo é:", area_Retangulo)
A área do retângulo é: 50
>>>
